# freeco-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  ethicalcheck.yml  prepare-release.yml  release.yml
agents/: ceo.toml  secretary.toml  shopping.toml
agents/freeco/: agent.toml
agents/freeco-ceo/: agent.toml
agents/freeco-concierge/: agent.toml
agents/freeco-developer/: agent.toml
agents/freeco-kids/: SOUL.md  agent.toml
agents/freeco-secretary/: agent.toml
agents/freeco-shopping/: agent.toml
agents/freeco-tester/: agent.toml
connectors/: README.md
connectors/akaunting-mcp/: server.py
connectors/graphify-mcp/: server.py
connectors/twenty-crm-mcp/: server.py
crates/freeco-agent-ceo/: Cargo.toml
crates/freeco-agent-ceo/src/: agent.rs  error.rs  lib.rs  manus_client.rs  types.rs
crates/freeco-agent-core/: Cargo.toml
crates/freeco-agent-core/src/: agent.rs  capability.rs  context.rs  error.rs  learning.rs  lib.rs  message.rs  openfang_bridge.rs  response.rs  time_util.rs
crates/freeco-agent-secretary/: Cargo.toml
crates/freeco-agent-secretary/src/: agent.rs  classifier.rs  error.rs  lib.rs
crates/freeco-agent-shopping/: Cargo.toml
crates/freeco-agent-shopping/src/: agent.rs  error.rs  lib.rs  research.rs
crates/freeco-budget-engine/: Cargo.toml
crates/freeco-budget-engine/src/: counter.rs  enforcer.rs  error.rs  ledger.rs  lib.rs  tier.rs
crates/freeco-content-filter/: Cargo.toml
crates/freeco-content-filter/src/: filter.rs  lib.rs  wordlists.rs
crates/freeco-input-parser/: Cargo.toml
crates/freeco-input-parser/src/: error.rs  language.rs  lib.rs  ocr.rs  parser.rs  types.rs
crates/freeco-runtime/: Cargo.toml
crates/freeco-runtime/src/: error.rs  lib.rs  registry.rs  runtime.rs
crates/freeco-tool-gateway/: Cargo.toml
crates/freeco-tool-gateway/src/: error.rs  events.rs  lib.rs  manifest.rs
crates/freeco-tool-gateway/src/clients/: google_places.rs  llm.rs  mod.rs  open_food_facts.rs  tavily.rs
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: backup.rs  bundled_templates.rs  lib.rs  local_ai.rs  middleware.rs  routes.rs  security.rs  server.rs  services.rs  session_auth.rs  types.rs  webchat.rs  ws.rs
crates/openfang-api/static/: index_body.html  index_head.html  manifest.json
crates/openfang-api/static/css/: components.css  layout.css  theme.css
crates/openfang-api/static/i18n/: en.json  i18n.js  ru.json
crates/openfang-api/static/js/: api.js  app.js
crates/openfang-api/static/js/pages/: agents.js  approvals.js  assistant.js  channels.js  chat.js  comms.js  hands.js  logs.js  overview.js  runtime.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/openfang-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs  skill_config_api_test.rs
crates/openfang-channels/: Cargo.toml
crates/openfang-channels/src/: bridge.rs  discord.rs  feishu.rs  whatsapp.rs
crates/openfang-cli/src/: bundled_agents.rs  dotenv.rs  main.rs
crates/openfang-cli/src/tui/screens/: comms.rs  hands.rs  peers.rs  settings.rs  skills.rs  templates.rs
crates/openfang-desktop/: tauri.conf.json
crates/openfang-desktop/src/: lib.rs  tray.rs  updater.rs
crates/openfang-extensions/src/: oauth.rs  vault.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: auth.rs  freeco_agents.rs  kernel.rs  lib.rs  pairing.rs  registry.rs  whatsapp_gateway.rs
crates/openfang-learning/: Cargo.toml  README.md
crates/openfang-learning/src/: event.rs  lib.rs  loop_manager.rs  promotion.rs  replay.rs  scoring.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: media_understanding.rs  routing.rs  tool_runner.rs
crates/openfang-skills/: Cargo.toml
crates/openfang-skills/src/: installer.rs
crates/openfang-types/: Cargo.toml
crates/openfang-types/src/: agent.rs  config.rs  manifest_signing.rs  media.rs
deploy/: openfang.service
docs/: README.md  VERTEX_AI_LOCAL_TESTING.md  agent-templates.md  api-reference.md  architecture.md  building-on-windows.md  channel-adapters.md  cli-reference.md  configuration.md  desktop.md  dograh-voice.md  freeco-concierge-guide.md  freeco-platform-plan.md  getting-started.md  index.html  launch-roadmap.md  mcp-a2a.md  openapi.yaml  production-checklist.md  providers.md  security-substantiation.md  security.md  self-development.md  skill-development.md  threat-model.md  troubleshooting.md  ui-coverage-audit.md  usb-plug-and-play.md  usb-portable.md  workflows.md
scripts/: build-portable.sh  bundle-local-ai.ps1  dev-build.ps1  dev-build.sh  install.ps1  install.sh  kubuntu-usb.sh  prepare_release_metadata.py
scripts/portable/: README.txt  run-linux.sh  run-macos.command  run-windows.bat  run.sh
wiki/: Architecture.md  Configuration.md  Development-and-testing.md  FAQ.md  Home.md  Installation.md  Integrations.md  Operations.md  Roadmap.md  SDKs.md  Security.md
