[package]
name = "freeco-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/FreecoDAO/openfang"

# cdylib: WASM dynamic library target (wasm-pack / wasm-bindgen)
# rlib:   normal Rust library used by openfang-runtime and agent crates
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
openfang-types = { path = "../openfang-types" }

# WASM targets: use js-sys for timestamps, wasm-bindgen for JS interop
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
tokio = { workspace = true }
