[package]
name = "freeco-agent-shopping"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/FreecoDAO/openfang"

# cdylib: WASM dynamic library target
# rlib:   normal Rust library
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agent-core   = { package = "freeco-agent-core", path = "../freeco-agent-core" }
tool-gateway = { package = "freeco-tool-gateway", path = "../freeco-tool-gateway" }
input-parser = { package = "freeco-input-parser", path = "../freeco-input-parser" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[dev-dependencies]
tokio   = { workspace = true }
mockito = { workspace = true }
