[package]
name = "freeco-content-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Content moderation and safety filter for FreEco Kids — blocks harmful content and promotes healthy, ecological, family-friendly interactions."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex-lite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
