[package]
name = "freeco-input-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/FreecoDAO/openfang"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockito = { workspace = true }
