[package]
name = "freeco-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/FreecoDAO/openfang"

# Native-only: uses tokio async runtime and SQLite (rusqlite).
# For WASM execution, see the individual agent crates compiled to wasm32.

[dependencies]
agent-core    = { package = "freeco-agent-core", path = "../freeco-agent-core" }
budget-engine = { package = "freeco-budget-engine", path = "../freeco-budget-engine" }
tool-gateway  = { package = "freeco-tool-gateway", path = "../freeco-tool-gateway" }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }

[dev-dependencies]
tokio     = { workspace = true }
mockito   = { workspace = true }
